--- a/the-project/package.json
+++ b/the-project/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^8.8.0",
     "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
+    "connect-ensure-login": "^0.1.1",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
     "redux-promise": "^0.5.3"
