--- a/the-project/package.json
+++ b/the-project/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-big-calendar": "^0.14.4",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
