--- a/the-project/package.json
+++ b/the-project/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "d3": "^4.9.1",
+    "d3-pie": "^1.1.0",
+    "d3pie": "^0.1.9",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-bundle": "^1.12.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
