--- a/the-project/package.json
+++ b/the-project/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^8.8.0",
     "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-big-calendar": "^0.14.4",
