--- a/the-project/package.json
+++ b/the-project/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-big-calendar": "^0.14.4",
+    "react-bootstrap": "^0.31.0",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
