--- a/the-project/package.json
+++ b/the-project/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "auth0-js": "^8.8.0",
     "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "connect-ensure-login": "^0.1.1",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1",
+    "massive": "^3.0.0",
     "moment": "^2.18.1",
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.0",
