--- a/the-project/package.json
+++ b/the-project/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.6.0",
     "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.3",
     "express": "^4.15.3",
